<resources>
    <string name="app_name">Menus</string>
    <string name="action_settings">Settings</string>
    <string name="order">Your orders</string>
    <string name="cart">selected items</string>
    <string name="alerts">alerts from xyz</string>
    <string name="choose">Choose one dessert with your order</string>
    <string name="donut">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwich">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="Froyo">FroYo is premium self-serve frozen yogurt</string>
    <string name="choose_delivery_string">Choose a delivery method:</string>

    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen: </string>
    <string name="title_activity_order">Order Activity </string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>




</resources>
