<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yuvan.bhuvan.menus.MainActivity">
    <item
        android:id="@+id/order"
        android:orderInCategory="0"
        android:title="@string/order"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="always" />

    <item
        android:id="@+id/cart"
        android:orderInCategory="1"
        android:title="@string/cart"
        android:icon="@drawable/ic_bag"
        app:showAsAction="always" />
    <item
        android:id="@+id/alerts"
        android:orderInCategory="2"
        android:title="@string/alerts"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="always" />

</menu>
