<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuvan.bhuvan.menus.OrderActivity">


    <ImageView
        android:id="@+id/order_layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Mockup Image"
        android:src="@drawable/droid_desserts_order_page"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderintrotext"
        android:layout_below="@id/order_layout_image"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:textSize="@dimen/intro_text_size"
        android:text="@string/choose_delivery_string"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderintrotext"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameday"
            android:text="@string/same_day_messenger_service"
            android:onClick="onRadioButtonClicked"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextday"
            android:text="@string/next_day_ground_delivery"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup"
            android:text="@string/pick_up"
            android:onClick="onRadioButtonClicked"

            />

    </RadioGroup>


</RelativeLayout>
